src/test/resources/inspections/implicit_types.lua
local aVoid
local anImplicitNumber = 1

---@type number
local aNumber = <error descr="Type mismatch. Required: 'number' Found: 'void'">aVoid</error>

aNumber = anImplicitNumber
